--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,14 @@
             android:theme="@style/PlayerTheme">
         </activity>
         <service android:name=".MediaPlayerService" android:enabled="true" />
-        <receiver android:name=".RemoteControlReceiver">
+        <receiver android:name=".Receivers.RemoteControlReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
+        <receiver android:name=".Receivers.MusicIntentReceiver">
+            <intent-filter>
+                <action android:name="android.media.AUDIO_BECOMING_NOISY" />
             </intent-filter>
         </receiver>
     </application>
