--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop" >
+            android:launchMode="singleTop">
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
-
+                android:resource="@xml/searchable"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
@@ -30,7 +29,8 @@
         </activity>
         <activity
             android:name=".TrackPlayerActivity"
-            android:label="@string/title_activity_track_player">
+            android:label="@string/title_activity_track_player"
+            android:parentActivityName="com.julie.spotifystreamer.MainActivity">
             <meta-data
                 android:name="android.support.parent_ACTIVITY"
                 android:value="com.julie.spotifystreamer.MainActivity">
@@ -38,7 +38,8 @@
         </activity>
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings">
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="com.julie.spotifystreamer.MainActivity">
             <meta-data
                 android:name="android.support.parent_ACTIVITY"
                 android:value="com.julie.spotifystreamer.MainActivity">
